nautilus --check (self test) stuck after nautilus_self_check_directory
Affected version
- Nightly flatpak: Can't test it because this flatpak is broken on Ubuntu
- Other: Ubuntu 19.10
Steps to reproduce
- Start Nautilus' "quick set of self-check tests" from a terminal, using:
nautilus --check
Current behavior
The check is stuck indefinitely after nautilus_self_check_directory
.
Expected behavior
The check continues past this point, the application quits in the end, possibly after summing up test results.